Addressed comments from PR